# SaudeMaisAPI

./: .coverage  .gitignore  README.md  SaudeMaisBD  pyproject.toml
migrations/: env.py
migrations/versions/: 9c6097110d9c_criar_tabela_evento.py
saudemaisapi/: app.py  database.py  models.py  schemas.py
tests/: conftest.py  test_app.py  test_bd.py  tests.py
